// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RockConstants creates a Channel if it doesn't exist 1`] = `
Object {
  "id": 1,
}
`;

exports[`RockConstants creates a Channel if it doesn't exist 2`] = `
Array [
  Array [
    "PrayerRequest",
  ],
]
`;

exports[`RockConstants creates a Channel if it doesn't exist 3`] = `
Array [
  Array [
    "InteractionChannels?%24filter=%28Name%20eq%20%27Apollos%20App%27%29%20and%20%28UsesSession%20eq%20true%29%20and%20%28IsActive%20eq%20true%29%20and%20%28ComponentEntityTypeId%20eq%20101%29%20and%20%28ChannelTypeMediumValueId%20eq%20512%29",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
  Array [
    "/InteractionChannels/1",
  ],
]
`;

exports[`RockConstants creates a Channel if it doesn't exist 4`] = `
Array [
  Array [
    "/InteractionChannels",
    Object {
      "ChannelTypeMediumValueId": 512,
      "ComponentEntityTypeId": 101,
      "IsActive": true,
      "Name": "Apollos App",
      "UsesSession": true,
    },
  ],
]
`;

exports[`RockConstants creates a Component if it doesn't exist 1`] = `Array []`;

exports[`RockConstants creates a Component if it doesn't exist 2`] = `
Array [
  Array [
    "PrayerRequest",
  ],
]
`;

exports[`RockConstants creates a Component if it doesn't exist 3`] = `
Array [
  Array [
    "InteractionChannels?%24filter=%28Name%20eq%20%27Apollos%20App%27%29%20and%20%28UsesSession%20eq%20true%29%20and%20%28IsActive%20eq%20true%29%20and%20%28ComponentEntityTypeId%20eq%20101%29%20and%20%28ChannelTypeMediumValueId%20eq%20512%29",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
  Array [
    "/InteractionChannels/1",
  ],
  Array [
    "InteractionComponents?%24filter=%28Name%20eq%20%27undefined%20-%20Some%20Title%27%29%20and%20%28ChannelId%20eq%201%29%20and%20%28EntityId%20eq%207%29",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
]
`;

exports[`RockConstants creates a Component if it doesn't exist 4`] = `
Array [
  Array [
    "/InteractionChannels",
    Object {
      "ChannelTypeMediumValueId": 512,
      "ComponentEntityTypeId": 101,
      "IsActive": true,
      "Name": "Apollos App",
      "UsesSession": true,
    },
  ],
]
`;

exports[`RockConstants finds a Prayer Request model ID 1`] = `
Object {
  "id": 1,
}
`;

exports[`RockConstants finds a Prayer Request model ID 2`] = `
Array [
  Array [
    "EntityTypes?%24filter=Name%20eq%20%27Rock.Model.PrayerRequest%27",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
]
`;

exports[`RockConstants finds the Channel if it exists 1`] = `
Object {
  "id": 1,
}
`;

exports[`RockConstants finds the Channel if it exists 2`] = `
Array [
  Array [
    "EntityTypes?%24filter=Name%20eq%20%27Rock.Model.PrayerRequest%27",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
  Array [
    "InteractionChannels?%24filter=%28Name%20eq%20%27Apollos%20App%27%29%20and%20%28UsesSession%20eq%20true%29%20and%20%28IsActive%20eq%20true%29%20and%20%28ComponentEntityTypeId%20eq%201%29%20and%20%28ChannelTypeMediumValueId%20eq%20512%29",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
]
`;

exports[`RockConstants finds the Component if it exists 1`] = `
Object {
  "id": 1,
}
`;

exports[`RockConstants finds the Component if it exists 2`] = `
Array [
  Array [
    "EntityTypes?%24filter=Name%20eq%20%27Rock.Model.PrayerRequest%27",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
  Array [
    "InteractionChannels?%24filter=%28Name%20eq%20%27Apollos%20App%27%29%20and%20%28UsesSession%20eq%20true%29%20and%20%28IsActive%20eq%20true%29%20and%20%28ComponentEntityTypeId%20eq%201%29%20and%20%28ChannelTypeMediumValueId%20eq%20512%29",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
  Array [
    "InteractionComponents?%24filter=%28Name%20eq%20%27undefined%20-%20Some%20Title%27%29%20and%20%28ChannelId%20eq%201%29%20and%20%28EntityId%20eq%207%29",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
]
`;
